app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meecha-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: meecha-app
  template:
    metadata:
      labels:
        app: meecha-app
    spec:
      containers:
        - name: meecha-app
          image: ghcr.io/meecha-org/meecha_back/meecha-app:latest
          ports:
            - containerPort: 8090

          # POD がリクエストを受けれるかの検証
          readinessProbe:
            httpGet:
              path: /health
              port: 8090
            initialDelaySeconds: 3
            periodSeconds: 3
            
          resources:
            requests:
              cpu: "100m"    # 例：100ミリコア
              memory: "128Mi"
            limits:
              cpu: "500m"    # 例：500ミリコア
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: meecha-app-svc
spec:
  type: LoadBalancer
  selector:
    app: meecha-app
  ports:
  - port: 8090
    targetPort: 8090
