authbase.yaml
apiVersion: v1
kind: Service
metadata:
  name: authbase-svc
spec:
  type: LoadBalancer
  selector:
    app: meecha-auth
  ports:
    - name: api-port
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: grpc-port
      protocol: TCP
      port: 9000
      targetPort: 9000
      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meecha-auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: meecha-auth
  template:
    metadata:
      labels:
        app: meecha-auth
    spec:
      containers:
        - name: authbase
          image: mattuu0/authbase-auth:0.2.2
          ports:
            - containerPort: 8080
            - containerPort: 9000
            
          # POD がリクエストを受けれるかの検証
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3

          resources:
            requests:
              cpu: "100m"    # 例：100ミリコア
              memory: "128Mi"
            limits:
              cpu: "500m"    # 例：500ミリコア
              memory: "256Mi"
          volumeMounts:
            - name: assets-vol
              mountPath: /assets/icons
      volumes:
        - name: assets-vol
          persistentVolumeClaim:
            claimName: meecha-claim

# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: meecha-scaling
# spec:
#   maxReplicas: 20
#   behavior:
#     scaleDown:
#       policies:
#       - type: Pods
#         value: 3
#         periodSeconds: 1
#       stabilizationWindowSeconds: 0
#     scaleUp:
#       stabilizationWindowSeconds: 0
#       policies:
#       - type: Pods
#         value: 3
#         periodSeconds: 1
#       selectPolicy: Max
#   metrics:
#   - resource:
#       name: cpu
#       target:
#         averageUtilization: 50
#         type: Utilization
#     type: Resource
#   minReplicas: 3
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: meecha-auth
#   tolerations:
#     - effect: NoExecute
#       key: node.kubernetes.io/not-ready
#       operator: Exists
#       tolerationSeconds: 10
#     - effect: NoExecute
#       key: node.kubernetes.io/unreachable
#       operator: Exists
#       tolerationSeconds: 10
