static.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meecha-static
spec:
  replicas: 3
  selector:
    matchLabels:
      app: meecha-static
  template:
    metadata:
      labels:
        app: meecha-static
    spec:
      containers:
        - name: meecha-static
          image: ghcr.io/meecha-org/meecha_back/meecha-static-experiment:latest
          ports:
            - containerPort: 80
  
---
apiVersion: v1
kind: Service
metadata:
  name: meecha-static-svc
spec:
  type: LoadBalancer
  selector:
    app: meecha-static
  ports:
  - port: 80
    targetPort: 80
