ingressroute.yaml
# ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: meecha-ingressroute
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`k8s-meecha.mattuu.com`) && PathPrefix(`/auth`)
      kind: Rule
      middlewares:
        - name: meecha-stripprefix
      services:
        - name: authbase-svc
          port: 80
    
    - match: Host(`k8s-meecha.mattuu.com`) && PathPrefix(`/app`)
      kind: Rule
      middlewares:
        - name: meecha-stripprefix
      services:
        - name: meecha-app-svc
          port: 8090

    - match: Host(`k8s-meecha.mattuu.com`) && PathPrefix(`/location`)
      kind: Rule
      middlewares:
        - name: meecha-stripprefix
      services:
        - name: meecha-location-svc
          port: 8090
    
    - match: Host(`k8s-meecha.mattuu.com`) && PathPrefix(`/statics`)
      kind: Rule
      middlewares:
        - name: meecha-stripprefix
      services:
        - name: meecha-static-svc
          port: 80
